--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <h1>⏱️ TimerX</h1>
-            <p class="subtitle">Free online timerX web app for everyone!</p>
+            <p class="subtitle">Free online timer web app for everyone!</p>
         </header>
 
         <div class="timer-display">
