--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TimerX - Free Online Timer App</title>
+    <title>TimerX - Online Timer App</title>
     <link rel="icon" href="imgs/stopwatch.png">
     <link rel="stylesheet" href="style.css">
 </head>
